// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Image should render a centered image 1`] = `
".a {
  display: block;
}
.b {
  margin-right: auto;
}
.c {
  margin-left: auto;
}


<img
  data-testid="image"
  class="a b c"
  src="https://placehold.co/600x400"
  width="600"
  height="400"
/>;
"
`;

exports[`components/Image should render a figure image 1`] = `
".a {
  margin-bottom: 0.5rem;
}
.b {
  line-height: 1;
}


<img
  data-testid="image"
  class="a b"
  src="https://placehold.co/600x400"
  width="600"
  height="400"
/>;
"
`;

exports[`components/Image should render a fluid image 1`] = `
".a {
  max-width: 100%;
}
.b {
  height: auto;
}


<img
  data-testid="image"
  class="a b"
  src="https://placehold.co/600x400"
  width="600"
  height="400"
/>;
"
`;

exports[`components/Image should render a rounded image 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}


<img
  data-testid="image"
  class="a b c d"
  src="https://placehold.co/600x400"
  width="600"
  height="400"
/>;
"
`;

exports[`components/Image should render a thumbnail image 1`] = `
".a {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.b {
  max-width: 100%;
}
.c {
  height: auto;
}
.d {
  border-top-left-radius: 0.375rem;
}
.e {
  border-top-right-radius: 0.375rem;
}
.f {
  border-bottom-right-radius: 0.375rem;
}
.g {
  border-bottom-left-radius: 0.375rem;
}
.h {
  border-top-color: #dee2e6;
}
.i {
  border-right-color: #dee2e6;
}
.j {
  border-bottom-color: #dee2e6;
}
.k {
  border-left-color: #dee2e6;
}
.l {
  border-top-style: solid;
}
.m {
  border-right-style: solid;
}
.n {
  border-bottom-style: solid;
}
.o {
  border-left-style: solid;
}
.p {
  border-top-width: 1px;
}
.q {
  border-right-width: 1px;
}
.r {
  border-bottom-width: 1px;
}
.s {
  border-left-width: 1px;
}
.t {
  padding-top: 0.25rem;
}
.u {
  padding-right: 0.25rem;
}
.v {
  padding-bottom: 0.25rem;
}
.w {
  padding-left: 0.25rem;
}


<img
  data-testid="image"
  class="a b c d e f g h i j k l m n o p q r s t u v w"
  src="https://placehold.co/600x400"
  width="600"
  height="400"
/>;
"
`;
